# aruco_markers_to_stl

./: .gitignore  CMakeLists.txt
apps/: main.cpp
data/: run_all.sh
include/: interface.h
src/: interface.cpp
